# CalcIOS

./: .gitignore  CMakeLists.txt  README.md  package.json  run-cpp-tests.ps1  run-web.ps1
cpp/: CalculatorEngine.cpp  CalculatorEngine.hpp  main.cpp  tests.cpp
spec/: behavior.md
web/: app.js  calculator-core.mjs  index.html  manifest.json  service-worker.js  styles.css
web/tests/: calculator-core.test.mjs
